src/snapshots/theorem_prover_rs__prover__tests__latex1.snap
---
source: src/prover.rs
expression: "prove(\"P\")"
---
\documentclass[preview,varwidth=\maxdimen,border=10pt]{standalone}
\usepackage{ebproof}
\begin{document}
\begin{prooftree}
\hypo{ &\vdash P}
\end{prooftree}
\end{document}

