src/snapshots/theorem_prover_rs__prover__tests__latex7.snap
---
source: src/prover.rs
expression: "prove(\"P to true\")"
---
\documentclass[preview,varwidth=\maxdimen,border=10pt]{standalone}
\usepackage{ebproof}
\begin{document}
\begin{prooftree}
\infer{0}[\scriptsize $\top$: Right]{P &\vdash \top}
\infer{1}[\scriptsize $\rightarrow$: Right]{ &\vdash P \rightarrow \top}
\end{prooftree}
\end{document}

